<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/dog_btn"
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:layout_marginBottom="64dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/dog_pic"
        android:padding="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/cat_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/dog" />

    <ImageButton
        android:id="@+id/cat_btn"
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cat_pic"
        android:padding="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dog_btn"
        app:layout_constraintTop_toTopOf="@+id/dog_btn"
        app:srcCompat="@drawable/cat" />

    <ImageButton
        android:id="@+id/pig_btn"
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:layout_marginTop="64dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/pig_pic"
        android:padding="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/fox_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:srcCompat="@drawable/pig" />

    <ImageButton
        android:id="@+id/fox_btn"
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/fox_pic"
        android:padding="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pig_btn"
        app:layout_constraintTop_toTopOf="@+id/pig_btn"
        app:srcCompat="@drawable/fox" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/animal_sounds"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/dog_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/animal_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pig_btn"
        tools:text="Waf Waf" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>